# RPIPico2-WolfBoot

./: .gitmodules  README.md
AppVer1/: CMakeLists.txt  blink.c  build-signed-app.sh
AppVer2/: CMakeLists.txt  blink.c  build-signed-app.sh
WolfBootLoader/: CMakeLists.txt  build-wolfboot.sh
